--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidGithubUse</string>
+    <string name="change_relativelayout_drawable">点击切换RelativeLayout的Drawable</string>
 </resources>
